Introduce table generation

--- a/build
+++ b/build
@@ -1,3 +1,5 @@
 #!/bin/sh
 
-odin build cli -out:x86-disasm -debug
+odin build tools/tablegen -out:table-gen -debug
+./table-gen ./tables/16bit.txt disasm/table_gen.odin
+odin build cli -out:x86-disasm -debug -define:X86_USE_STUB=false
